# execution

./: .env.example  .gitignore  BRIEF.MODULE.BROKER_ADAPTER.md  BRIEF.MODULE.COO_OPERATOR_SURFACE.md  BRIEF.MODULE.IB_CONNECTION_SUPERVISOR.md  BRIEF.MODULE.IB_PAPER_ADAPTER.md  BRIEF.MODULE.RIVER_IBKR_STREAMER.md  README.md  STATUS.md  pyproject.toml  requirements.txt  run.py
docs/: BRIEF.MODULE.RIVER_IBKR_STREAMER.PREP.md
docs/runbooks/: IB_GATEWAY_OPERATIONS.md  RIVER_OPERATIONS.md
drills/: ib_paper_roundtrip.py  ib_paper_validation.py
execution_rail/: __init__.py  broker_adapter.py  broker_factory.py  broker_protocol.py  config.py  gateway.py  halt_types.py  inspect.py  mode.py  mode_promotion.py  position.py
execution_rail/ib/: __init__.py  account.py  client_id.py  config.py  heartbeat.py  orders.py  paper_adapter.py  positions.py  real_client.py  session.py  supervisor.py
execution_rail/river/: __init__.py  market_hours.py  resubscribe.py  schema.py  seam.py  streamer.py  supervisor.py  synthetic.py  writer.py
scripts/: start_river_streamer.py
tests/contract/: test_ib_paper_adapter_protocol.py  test_river_streamer_contract.py
tests/integration/: test_ib_paper_roundtrip.py  test_river_streamer.py  test_supervisor_gateway_kill.py
tests/unit/: test_broker_protocol.py  test_client_id.py  test_heartbeat.py  test_ib_config.py  test_ib_paper_adapter.py  test_ib_session.py  test_inspect.py  test_mode_promotion.py  test_position.py  test_real_client.py  test_reconnect_tracker.py  test_river_resubscribe.py  test_river_schema.py  test_river_seam.py  (+7 more)
(+4 files in other folders)
