[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-rail"
version = "0.1.0"
description = "Capital execution rail — BrokerAdapter protocol, paper broker, IB adapters (candidate_C)"
requires-python = ">=3.12"
license = {text = "Proprietary"}
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Brief 2: ib = ["ib_insync>=0.9.86"]

[tool.setuptools.packages.find]
include = ["execution_rail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
