[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-rail"
version = "0.3.0"
description = "Capital execution rail — BrokerAdapter protocol, paper broker, IB adapters (candidate_C)"
requires-python = ">=3.12"
license = {text = "Proprietary"}
readme = "README.md"
dependencies = [
    "ib_insync>=0.9.86",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "python-dotenv>=1.0"]

[tool.setuptools.packages.find]
include = ["execution_rail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires IB Gateway (IBKR_INTEGRATION_TEST=1)",
]
